2001-08-22  Christian Meyer  <chrisime@gnome.org>

	* src/nautilus-shell-ui.xml: Removed "Community Support"
	entry from file. Removed "Eazel" from feedback tip.

	* src/nautilus-shell.c: In function display_caveat():
	s/"http://www.eazel.com/feedback.html"/<nautilus-list@eazel.com>
	s/Eazel does not/We do not
	Removed eazel-install stuff in function save_window_states.

2001-08-21  Darin Adler  <darin@bentspoon.com>

	* docs/nautilus-io.txt: Add a new document.

2001-08-19  Maciej Stachowiak  <mjs@noisehavoc.org>

	* components/music/nautilus-music-view.c: (get_cell_text),
	(nautilus_music_view_initialize), (get_song_text),
	(music_view_set_selected_song_title), (selection_callback),
	(value_changed_callback), (compare_song_numbers),
	(compare_song_titles), (compare_song_artists),
	(compare_song_times), (compare_song_bitrates), (sort_list),
	(click_column_callback), (list_move_vertical), (list_moveto),
	(list_reveal_row), (play_current_file), (go_to_next_track),
	(nautilus_music_view_update), (nautilus_music_view_load_uri):
	Ported to use EelList instead of GtkCList. This looks better and
	allows for futre drag and drop support.

2001-08-18  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-directory-background.c:
	(nautilus_file_background_receive_root_window_changes),
	(set_root_pixmap): Trap errors when doing the XKillClient
	call inside set_root_pixmap. I don't know why it would
	fail, exactly, but we have reports from the field that it
	is failing.

2001-08-16  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-volume-monitor.c:
	(nautilus_volume_monitor_get_mount_name_for_display):
	Corrected a backwards g_return_if_fail!

2001-08-15  Darin Adler  <darin@bentspoon.com>

	A pass at cleaning up the volume monitor. Made all the details of
	NautilusVolume private.

	* libnautilus-private/filesystem-attributes.xml: Changed the
	"description" string to be named "default_volume_name" and also
	marked it to be localized.
	