@@ -1,30 +1,31 @@
 <?xml version="1.0"?>
 <bookmarks>
   <folder _name="Software">
-        <bookmark _name="Allaire" icon_name="i-web" uri="http://ad.doubleclick.net/clk%3b2508286%3b5488574%3bx?http://allaire11.allaire.com/download/ordercd.cfm"/>		
+        <bookmark _name="Allaire" icon_name="i-web" uri="http://www.allaire.com/Products/index.cfm"/>
         <bookmark _name="Borland" icon_name="i-web" uri="http://www.borland.com/kylix/"/>
-        <bookmark _name="Eazel" icon_name="i-web" uri="http://www.eazel.com"/>
         <bookmark _name="MandrakeSoft" icon_name="i-web" uri="http://mandrakesoft.com/"/>
         <bookmark _name="Netraverse" icon_name="i-web" uri="http://www.netraverse.com"/>
         <bookmark _name="Red Hat" icon_name="i-web" uri="http://www.redhat.com"/>
+        <bookmark _name="SuSE" icon_name="i-web" uri="http://www.suse.com"/>
         <bookmark _name="Sun StarOffice" icon_name="i-web" uri="http://www.sun.com/products/staroffice/"/>
+        <bookmark _name="Ximian" icon_name="i-web" uri="http://www.ximian.com"/>
         <bookmark _name="Zero-Knowledge" icon_name="i-web" uri="http://www.zeroknowledge.com"/>
   </folder>
   <folder _name="Hardware">
         <bookmark _name="Compaq" icon_name="i-web" uri="http://www.compaq.com/products/software/linux/"/>
-        <bookmark _name="CNET Computers.com" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hudc02290/computers.cnet.com/hardware/0-1016.html"/>
+        <bookmark _name="CNET Computers.com" icon_name="i-web" uri="http://computers.cnet.com/hardware/0-1016.html"/>
         <bookmark _name="Dell" icon_name="i-web" uri="http://www.dell.com/linux/"/>
-        <bookmark _name="Penguin Computing" icon_name="i-web" uri="http://www.penguincomputing.com/?vid=eazel"/>
-        <bookmark _name="ZDNet Linux Hardware Database" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hud002290/lhd.zdnet.com"/>
+        <bookmark _name="Penguin Computing" icon_name="i-web" uri="http://www.penguincomputing.com"/>
+        <bookmark _name="ZDNet Linux Hardware Database" icon_name="i-web" uri="http://lhd.zdnet.com"/>
   </folder>
   <folder _name="News and Media">
          <bookmark _name="Binary Freedom" icon_name="i-web" uri="http://www.binaryfreedom.com/"/>
-         <bookmark _name="CNET Linux Center" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hudc02290/linux.cnet.com/linux/0-1518529-7-3378110.html"/>
+         <bookmark _name="CNET Linux Center" icon_name="i-web" uri="http://linux.cnet.com/linux/0-1518529-7-3378110.html"/>
          <bookmark _name="LinuxOrbit.com" icon_name="i-web" uri="http://www.linuxorbit.com"/>
          <bookmark _name="Linux Weekly News" icon_name="i-web" uri="http://www.lwn.net"/>
-         <bookmark _name="O'Reilly" icon_name="i-web" uri="http://www.eazel.oreillynet.com"/>
+         <bookmark _name="O'Reilly" icon_name="i-web" uri="http://www.oreillynet.com"/>
          <bookmark _name="OSDN" icon_name="i-web" uri="http://www.osdn.com"/>
-         <bookmark _name="ZDNet Linux Resource Center" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hud0022900/linux.zdnet.com"/>
+         <bookmark _name="ZDNet Linux Resource Center" icon_name="i-web" uri="http://linux.zdnet.com"/>
   </folder>
   <folder _name="Web Services">
          <bookmark _name="CollabNet" icon_name="i-web" uri="http://www.collab.net/community/"/>
@@ -51,6 +52,4 @@
          <bookmark _name="OpenOffice" icon_name="i-web" uri="http://www.openoffice.org"/>
   </folder>
 </bookmarks>
-
-
 
