@@ -1,5 +1,10 @@
 2001-08-22  Christian Meyer  <chrisime@gnome.org>
 
+	* data/static_bookmarks.xml: Removed Eazel related bookmarks and ad's.
+	Added SuSE and Ximian.
+
+2001-08-22  Christian Meyer  <chrisime@gnome.org>
+
 	* src/nautilus-shell-ui.xml: Removed "Community Support"
 	entry from file. Removed "Eazel" from feedback tip.
 
